# RepoGPT

./: .gitignore  .pre-commit-config.yaml  IDEA.md  LICENSE  Makefile  README.md  README_ES.md  TODO.md  a  concat.py  core.py  e  example.txt  example_.json  example_.txt  pyproject.toml  pytest.ini  repogpt_files.txt  requirements.txt  setup.py  test_files.txt  tests_files.txt  tree.txt  tree_builder.py
.github/workflows/: ci.yml
docs/: CHALLENGES.md  fixtures_mocks_patches.md
repogpt/: __init__.py  __main__.py  analyzer.py  codigo_concatenado.txt  e  exceptions.py  tree_build.py
repogpt/docs/: DEVELOPING.md  TODO.md
repogpt/extractors/: __init__.py  base.py  dependencies.py  git.py  metrics.py  structure.py  todos.py
repogpt/parsers/: __init__.py  base.py  dockerfile_.py  generic.py  html.py  javascript.py  markdown.py  python.py  yaml_parser.py
repogpt/reporting/: __init__.py  base.py  json_reporter.py  markdown_reporter.py
repogpt/utils/: __init__.py  file_utils.py  gitignore_handler.py  logging.py  text_processing.py
resources/: reporte_ejemplo.json  reporte_ejemplo.md
src/repogpt/: __init__.py  exceptions.py  models.py
src/repogpt/adapters/collector/: simple_collector.py
src/repogpt/adapters/parser/: __init__.py  md_parser.py  py_parser.py
src/repogpt/adapters/pipeline/: simple_pipeline.py
src/repogpt/adapters/publisher/: simple_publisher.py
src/repogpt/app/: cli.py
src/repogpt/core/: ports.py  service.py
src/repogpt/utils/: file_utils.py  text_processing.py  tree_utils.py
tests/: README.md  test_phase_2.py  test_phase_3.py
tests/data/: bad.py  basic.md  basic.py  docstring_examples.py  edge_cases.md  edge_cases.py  edge_cases_blanklines.py  edge_cases_comments.py  with_comments.md
tests/unit/adapters/collector/: test_simple_collector.py
tests/unit/adapters/parsers/: test_md_parser.py  test_py_parser.py
tests/unit/adapters/pipeline/: test_simple_pipeline.py
tests/unit/adapters/publisher/: test_simple_publisher.py
tests/unit/utils/: test_text_processing.py
